# rustac

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json  release-plz.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  labels.yml  pr.yml  release-npm.yml  release-please.yml  release-plz.yml
crates/api/: CHANGELOG.md  Cargo.toml  README.md
crates/api/mocks/: search-page-1.json
crates/api/src/: client.rs  collections.rs  error.rs  fields.rs  item_collection.rs  items.rs  lib.rs  url_builder.rs
crates/asgi/: Cargo.toml
crates/asgi/src/: lib.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/data/: invalid-item.json
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: test_cli.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/data/: 20201211_223832_CS2.json  bands-v1.0.0.json  bands-v1.1.0.json  invalid-datetimes.json  invalid-item-datetime.json  item-collection.json  multi-polygons.json  opr-one.parquet  two-sentinel-2-items.json
crates/core/src/: asset.rs  bbox.rs  catalog.rs  collection.rs  datetime.rs  error.rs  fields.rs  format.rs  geo.rs  geoparquet.rs  hash.rs  href.rs  item.rs  item_collection.rs  json.rs  lib.rs  link.rs  migrate.rs  ndjson.rs  sort.rs  value.rs
crates/core/src/api/: adapters.rs  client.rs  conformance.rs  error.rs  federated.rs  fields.rs  filter.rs  item_collection.rs  items.rs  mod.rs  root.rs  search.rs  sort.rs  url_builder.rs
crates/core/src/geoarrow/: json.rs  mod.rs
crates/core/src/geoparquet/: feature.rs
crates/core/tests/: examples.rs  migrate.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/duckdb/: CHANGELOG.md  Cargo.toml  README.md
crates/duckdb/data/: sentinel-1-global-mosaics.parquet
crates/duckdb/scripts/: generate-test-data
crates/duckdb/src/: client.rs  error.rs  extension.rs  lib.rs
crates/extensions/: CHANGELOG.md  Cargo.toml
crates/extensions/data/auth/: collection.json
crates/extensions/data/file/: catalog.json  item.json
crates/extensions/src/: authentication.rs  file.rs  lib.rs
crates/io/: CHANGELOG.md  Cargo.toml  README.md
crates/io/mocks/: collections-page-1.json  collections-page-2.json  items-page-1.json  items-page-2.json  not-a-collection.json  search-page-2.json
crates/io/src/: api.rs  error.rs  format.rs  geoparquet.rs  json.rs  lib.rs  ndjson.rs  read.rs  realized_href.rs  store.rs  write.rs
crates/io/src/store/: get.rs  put.rs
crates/io/src/validate/: mod.rs  validator.rs
crates/io/tests/: aws.rs  examples.rs  migrate.rs
crates/pgstac/: CHANGELOG.md  Cargo.toml  README.md
crates/pgstac/src/: client.rs  lib.rs  page.rs
crates/r/: .Rbuildignore  .gitignore  DESCRIPTION  README.md
crates/r/R/: extendr-wrappers.R  rustac.R
crates/r/rustac/: DESCRIPTION  NAMESPACE
crates/r/rustac/R/: extendr-wrappers.R  rustac.R  zzz.R
crates/r/rustac/src/: entrypoint.c
crates/r/rustac/src/rust/: Cargo.toml
crates/r/rustac/src/rust/src/: lib.rs
crates/r/src/: Makevars  Makevars.win
crates/r/src/rust/: Cargo.toml
crates/r/src/rust/src/: lib.rs
crates/r/tests/: testthat.R
crates/r/tests/testthat/: setup.R  test-stac_read.R  test-stac_write.R
crates/server/: CHANGELOG.md  Cargo.toml  README.md
crates/server/data/joplin/: feature.geojson
crates/server/src/: api.rs  error.rs  routes.rs
crates/server/src/backend/: duckdb.rs  memory.rs  mod.rs  pgstac.rs
crates/validate/: CHANGELOG.md  Cargo.toml  README.md
crates/validate/src/: error.rs  lib.rs  validator.rs
crates/validate/src/schemas/v1.0.0/: datetime.json  provider.json
crates/validate/src/schemas/v1.1.0/: datetime.json
crates/validate/tests/: migrate.rs
crates/wasm/: CHANGELOG.md  Cargo.toml  README.md  package.json  vitest.config.ts
crates/wasm/src/: lib.rs
crates/wasm/tests/: stac_wasm.test.ts
crates/wasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
docs/: cli.md  formats.md  history.md  index.md  pronunciation.md  search-clients.md
docs/cli/: index.md
docs/stylesheets/: extra.css
scripts/: format  lint  validate-stac-geoparquet
scripts/fixtures/: sentinel-2-l2a.json
spec-examples/v1.1.0-beta.1/collection-only/: collection-with-schemas.json  collection.json
