[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/derive",
    "crates/duckdb",
    "crates/extensions",
    "crates/io",
    "crates/pgstac",
    "crates/server",
    "crates/validate",
    "crates/wasm",
]
default-members = [
    "crates/core",
    "crates/cli",
    "crates/derive",
    "crates/duckdb",
    "crates/extensions",
    "crates/io",
    "crates/server",
    "crates/validate",
]

[workspace.package]
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2024"
homepage = "https://stac-utils.github.io/rustac"
repository = "https://github.com/stac-utils/rustac"
license = "MIT OR Apache-2.0"
categories = ["science", "data-structures"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
arrow-array = "56.0.0"
arrow-cast = "56.0.0"
arrow-json = "56.0.0"
arrow-schema = "56.0.0"
assert-json-diff = "2.0"
assert_cmd = "2.0"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bytes = "1.7"
chrono = "0.4.39"
clap = "4.5"
clap_complete = "4.5"
cql2 = "0.4.0"
duckdb = "1.4.0"
fluent-uri = "0.4.1"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
geo = "0.31.0"
geo-traits = "0.3.0"
geo-types = "0.7.16"
geoarrow-array = "0.6.0"
geoparquet = "0.6.0"
geoarrow-schema = "0.6.0"
geojson = "0.24.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
http = "1.1"
indexmap = { version = "2.10.0", features = ["serde"] }
jsonschema = { version = "0.37.0", default-features = false, features = [
    "resolve-async",
] }
libduckdb-sys = "1.3.0"
log = "0.4.25"
mime = "0.3.17"
mockito = "1.5"
object_store = "0.12.0"
parquet = { version = "56.0.0" }
quote = "1.0"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
] }
referencing = { version = "0.37.0", features = ["retrieve-async"] }
rstest = "0.26.1"
rustls = { version = "0.23.22", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
syn = "2.0"
tempfile = "3.16"
thiserror = "2.0"
tokio = "1.44"
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.13.0"
tokio-stream = "0.1.16"
tokio-test = "0.4.4"
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
tracing-indicatif = "0.3.9"
url = "2.3"
webpki-roots = "1.0.0"
wkb = "0.9.0"
