[project]
name = "rustac"
version = "0.0.0"
description = "This package should never be released, it's just for uv."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
docs = ["mkdocs-material[imaging]>=9.7.6", "mkdocs-redirects>=1.2.3"]
stac-geoparquet = [
    "deepdiff>=9.1.0",
    "pyarrow>=24.0.0",
    "stac-geoparquet>=0.8.0",
]
stac-api-validator = ["setuptools>=82.0.1", "stac-api-validator>=0.6.8"]

[tool.uv]
default-groups = ["docs", "stac-geoparquet", "stac-api-validator"]
