[package]
name = "rustac"
description = "Command line interface for rustac"
version = "0.5.3"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
pgstac = ["stac-server/pgstac"]
duckdb-bundled = ["stac-duckdb/bundled"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
futures-core.workspace = true
futures-util.workspace = true
serde_json.workspace = true
stac.workspace = true
stac-api = { workspace = true, features = ["client"] }
stac-duckdb.workspace = true
stac-io = { workspace = true, features = [
    "store-all",
    "reqwest",
    "geoparquet",
] }
stac-server = { workspace = true, features = ["axum", "duckdb"] }
stac-validate.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "io-std",
    "rt-multi-thread",
    "fs",
] }
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
rstest.workspace = true
tempfile.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "rustac"
path = "src/main.rs"
doc = false
test = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
