[package]
name = "stac"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) specification"
version = "0.14.0"
keywords = ["geospatial", "stac", "metadata", "geo"]
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
geo = ["dep:geo"]
geoarrow = [
    "dep:geoarrow-array",
    "dep:geoarrow-schema",
    "dep:arrow-array",
    "dep:arrow-cast",
    "dep:arrow-json",
    "dep:arrow-schema",
    "dep:geo-traits",
    "dep:geo-types",
    "dep:wkb",
]
geoparquet = ["geoarrow", "dep:geoparquet", "dep:parquet"]

[dependencies]
arrow-array = { workspace = true, optional = true, features = ["chrono-tz"] }
arrow-cast = { workspace = true, optional = true }
arrow-json = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
geo = { workspace = true, optional = true }
geo-traits = { workspace = true, optional = true }
geo-types = { workspace = true, optional = true }
geoarrow-array = { workspace = true, optional = true }
geoarrow-schema = { workspace = true, optional = true }
geojson.workspace = true
geoparquet = { workspace = true, optional = true }
indexmap.workspace = true
log.workspace = true
mime.workspace = true
parquet = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
stac-derive.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
wkb = { workspace = true, optional = true }

[dev-dependencies]
assert-json-diff.workspace = true
bytes.workspace = true
rstest.workspace = true
stac-validate = { path = "../validate" }
tokio = { workspace = true, features = ["macros"] }
tokio-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
