[package]
name = "stac-duckdb"
description = "Client for querying stac-geoparquet using DuckDB"
version = "0.3.2"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
bundled = ["duckdb/bundled"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
cql2.workspace = true
duckdb.workspace = true
geo.workspace = true
geoarrow-schema = { workspace = true }
geojson.workspace = true
getrandom.workspace = true
log.workspace = true
serde_json.workspace = true
stac = { version = "0.16.0", path = "../core", features = ["geoarrow", "geo"] }
thiserror.workspace = true

[dev-dependencies]
geo.workspace = true
rstest.workspace = true
stac-validate = { path = "../validate" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
