[package]
name = "stac-io"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
geoparquet = ["stac/geoparquet", "dep:parquet"]
reqwest = ["dep:reqwest"]
store = ["dep:object_store"]
store-aws = ["store", "object_store/aws"]
store-azure = ["store", "object_store/azure"]
store-gcp = ["store", "object_store/gcp"]
store-http = ["store", "object_store/http"]
store-all = ["store-aws", "store-azure", "store-gcp", "store-http"]

[dependencies]
bytes.workspace = true
fluent-uri = { workspace = true, optional = true }
jsonschema = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json", "blocking"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
stac.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-test.workspace = true

[[test]]
name = "aws"
required-features = ["store-aws"]
