[package]
name = "stac-io"
version = "0.2.0"
description = "Input and output (I/O) for the SpatioTemporal Asset Catalog (STAC)"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
geoparquet = ["stac/geoparquet", "dep:parquet"]
store = ["dep:object_store"]
store-aws = ["store", "object_store/aws"]
store-azure = ["store", "object_store/azure"]
store-gcp = ["store", "object_store/gcp"]
store-http = ["store", "object_store/http"]
store-all = ["store-aws", "store-azure", "store-gcp", "store-http"]

[dependencies]
async-stream.workspace = true
bytes.workspace = true
fluent-uri = { workspace = true, optional = true }
futures.workspace = true
http.workspace = true
jsonschema = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parquet = { workspace = true, optional = true, features = ["arrow", "async", "object_store"] }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
stac.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
geojson.workspace = true
mockito.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true

[[test]]
name = "aws"
required-features = ["store-aws"]
