[package]
name = "pgstac"
description = "Rust interface for pgstac"
version = "0.4.5"
keywords = ["geospatial", "stac", "metadata", "raster", "database"]
categories = ["database", "data-structures", "science"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
stac = { version = "0.16.2", path = "../core" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-postgres = { workspace = true, features = ["with-serde_json-1"] }
tracing.workspace = true

[dev-dependencies]
geojson.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
