[package]
name = "stac-validate"
version = "0.5.1"
readme = "README.md"
description = "json-schema validation for the Rust implementation of the STAC specification"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
fluent-uri.workspace = true
jsonschema.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
stac.workspace = true
thiserror.workspace = true
async-trait.workspace = true
referencing.workspace = true
async-recursion.workspace = true

[dev-dependencies]
stac-io.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
