[package]
name = "stac-validate"
version = "0.6.0"
readme = "README.md"
description = "json-schema validation for the Rust implementation of the STAC specification"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
fluent-uri.workspace = true
jsonschema.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
stac = { version = "0.15.0", path = "../core" }
thiserror.workspace = true
async-trait.workspace = true
referencing.workspace = true
async-recursion.workspace = true

[dev-dependencies]
stac-io = { version = "0.2.0", path = "../io" }
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
