[package]
name = "stac-wasm"
version = "0.0.2"
description = "Converts Arrow arrays to STAC items, via WASM"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-wasm = { git = "https://github.com/kylebarron/arrow-wasm", rev = "012447cab019efbb051cbd43ea5ad55a7549a4d8" }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
stac = { workspace = true, features = ["geoarrow"] }
thiserror.workspace = true
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
