[package]
name = "stac-wasm"
version = "0.1.0"
readme = "README.md"
description = "Converts Arrow arrays to STAC items, via WASM"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-wasm = { git = "https://github.com/kylebarron/arrow-wasm", rev = "6da94ef0a1522a244984a7d3d58a0339d0851d96" }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
stac = { version = "0.16.0", path = "../core", features = ["geoparquet"] }
thiserror.workspace = true
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
