[package]
name = "stac-wasm"
version = "0.1.0"
readme = "README.md"
description = "Converts Arrow arrays to STAC items, via WASM"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-wasm = { git = "https://github.com/kylebarron/arrow-wasm", rev = "874fc689cf1c871a1613bef175e5a9ac65cc8365" }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
stac = { version = "0.16.5", path = "../core", features = ["geoparquet"] }
thiserror.workspace = true
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
