[package]
name = "rustac-r"
version = "0.1.0"
# authors.workspace = true
edition = "2024"
# license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
arrow-array = "57.0.0"
arrow-ipc = { version = "57.0.0", features = ["lz4", "zstd"] }
extendr-api = "0.8"
geoparquet = "0.7.0"
parquet = "57.0.0"
serde_json = "1.0.80"
stac = { git = "https://github.com/stac-utils/rustac", branch = "main", features = ["geoparquet"] }
stac-io = { git = "https://github.com/stac-utils/rustac", branch = "main", features = ["geoparquet"] }
