[package]
name = "rustac-r"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
arrow-array.workspace = true
arrow-ipc = { version = "57.0.0", features = ["lz4", "zstd"] }
extendr-api = "0.8"
geoparquet = "0.7.0"
parquet.workspace = true
serde_json.workspace = true
stac = { path = "../../../core", features = ["geoparquet"] }
stac-io = { path = "../../../io", features = ["geoparquet"] }
